--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=<key>&libraries=places&language=en"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=api_key&libraries=places&language=en"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=api_key&libraries=places"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
