refactor and quick fix

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqiIfDtaGfTmioES2pR6KZPoTIQtpfI4&libraries=places&language=en"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqiIfDtaGfTmioES2pR6KZPoTIQtpfI4&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=...&libraries=places&language=en"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=...&libraries=places"></script> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
